The current Tsunami protocol version is: v1.1

Improvements and protocol version compliant new features
are added in the cvs builds.

build 20131230
   - do not inline got_block function - allows to compile on OS X Mavericks (thanks Matt Yanchyshyn for the suggestion) 

v1.1 CvsBuild 42
  - changes to realtime server code:
   - added EVN 2009 filename aux info parsing so that the
     format with 'ccvvvvv' 2-char code plus value (versus old
     format 'cc=vvvvv') is supported for the data length field

v1.1 CvsBuild 41
  - changed default 'rateadjust' to No

v1.1 CvsBuild 40
  - changes to client code:
   - added 'rateadjust' setting: rate for next file transfer is set to 
     the previously achieved effective throughput +20%
   - at end of transfer, server now stopped first and disk flush done
     after this, not vice versa, to further avoid kernel "UDP checksum error"
     errors that are due to socket receive buffer overflow
  - changes to server code:
   - partial feedback messages now treated properly, instead
     of blocking on TCP until full message and then discarding it
   - transmit rate is throttled to 1/10th at the final block

v1.1 CvsBuild 39
  - changes to client code:
   - client statistics output now shows state-flags
   - smoother access to ring buffer
   - fix sending of feedback even during pending transfer restart,
     this gets rid of the "no hearbeat" server messages
  - changes to server code:
   - TCP uses read() and write() wrappers that insure full-size operations
   - fix missing clears of some string buffers before receiving client strings
   - fix Ubuntu Karmic compile warnings

v1.1 CvsBuild 38
  - unfortunately the include/tsunami-cvs-buildnr.h in the 38dev was already 38
    so we skip this build and name the new one 39!

v1.1 CvsBuild 38dev (testing version!)
 - changes to client code:
   - make use of "xfer->restart_wireclearidx" variable as upper limit to ignored blocks